[gd_scene load_steps=5 format=3 uid="uid://de1uepe5bupth"]

[ext_resource type="Script" path="res://scenes/scripts/multiplayer_host_or_join.gd" id="1_gfyrb"]
[ext_resource type="Shader" path="res://scenes/shaders/main.gdshader" id="2_l4cx3"]
[ext_resource type="Texture2D" uid="uid://btepcttr42vi3" path="res://icon.svg" id="3_hd03v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_khe3r"]
shader = ExtResource("2_l4cx3")

[node name="main" type="Node2D"]
script = ExtResource("1_gfyrb")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_khe3r")
position = Vector2(563.5, 328)
scale = Vector2(10.7422, 6.15625)
texture = ExtResource("3_hd03v")

[node name="Buttons" type="Node2D" parent="."]

[node name="Host" type="Button" parent="Buttons"]
offset_left = 151.0
offset_top = 145.165
offset_right = 427.0
offset_bottom = 249.165
text = "Host"

[node name="Join" type="Button" parent="Buttons"]
offset_left = 742.0
offset_top = 145.165
offset_right = 1018.0
offset_bottom = 249.165
text = "Join"

[node name="Main menu" type="Button" parent="Buttons"]
offset_left = 32.0
offset_top = 29.0
offset_right = 140.0
offset_bottom = 71.0
text = "Main menu"

[node name="StartGame" type="Button" parent="Buttons"]
offset_left = 450.0
offset_top = 366.77
offset_right = 726.0
offset_bottom = 470.77
text = "Start game
"

[connection signal="pressed" from="Buttons/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Buttons/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Buttons/Main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Buttons/StartGame" to="." method="_on_start_game_pressed"]
